--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
+
     </head>
          <meta charset="UTF-8">
          <meta name="viewport" content="width=device-width, initial-scale=1.0">
          <title>AluraBooks</title>
+         <link rel="stylesheet" href="reset.css">
          <link rel="styleheet" href="style.css">
     <head>
-    <body>
 
+    <body>
+        <header class="cabeçalho">
+            <span class="cabeçalho_menu-hamburguer"></span>
+            <img src="img/Logo.svg" alt="Logo da Alurabooks">
+            <a href="#"><img src="img/Favoritos.svg" alt="Meus Favoritos"></a>
+            <a href="#"><img src="img/Compras.svg" alt="Carrinho de Compras" ></a>
+            <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
+        
     </body>
-</html>
+
+    </html>
