--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 
     <body>
         <header class="cabeçalho">
-            <span class="cabeçalho_menu-hamburguer"></span>
-            <img src="img/Logo.svg" alt="Logo da Alurabooks">
-            <a href="#"><img src="img/Favoritos.svg" alt="Meus Favoritos"></a>
-            <a href="#"><img src="img/Compras.svg" alt="Carrinho de Compras" ></a>
-            <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
-        
-    </body>
+          <div class="container">
+            <span class="cabeçalho_menu-hamburguer container__imagem"></span>
+    </div>
+    <div class="container">
+        <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
+            <a href="#"><img src="img/Favoritos.svg" alt="Meus Favoritos" class="container__imagem"></a>
+            <a href="#"><img src="img/Compras.svg" alt="Carrinho de Compras" class="container__imagem" ></a>
+            <a href="#"><img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
+    </div>
+   </header>
+</body>
 
-    </html>
+</html>
